=== 0.5 ===
2011-10-03  Aki Sasaki  <aki@mozilla.com>
Going to start CHANGES-noting *device* changes

* mozharness/test/device.py (DeviceMixin.query_device_time)
    switched to adb date

* mozharness/test/device.py (DeviceMixin.set_device_time)
    switched to adb date

* scripts/device_talosrunner.py (DeviceTalosRunner.install_app)
    set_device_time() if enable_automation

2011-09-26  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/errors.py (ADBErrorList):
    Added.

2011-09-20  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/config.py (BaseConfig.__init__):
    Modified volatile_config, which was previously unused.

* mozharness/base/config.py (BaseConfig._create_config_parser):
    Renamed only_actions to actions.

* mozharness/base/config.py (BaseConfig.parse_args):
    Deleted any volatile_config keys from self._config.
    Updated the comments.
    Allow for default_actions, actions, add_actions, and no_actions to be
    set in the config file, which should allow for more cross-team utility.

    Add the volatile_config to self._config['volatile_config'], which will
    add it to the dump_config but won't actually be used (I think). The
    alternative was to
        a) possibly get rid of initial_config_file,
        b) change parse_config_file to return (config, path-to-config),
        c) copy config_file (and initial_config_file if not removed in (a))
           into upload_dir so we can duplicate this later.
    I think it's cleaner this way, but it remains to be seen.

2011-09-19  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/errors.py (BaseErrorList):
    Added.

* mozharness/base/python.py (VirtualenvMixin.create_virtualenv):
    Added virtualenv_error_list. Not sure how helpful this is, but it
    works at catching warnings/errors.

* mozharness/base/script.py (ShellMixin.run_command):
    Changed halt_on_failure behavior.  Was dying if num_errors; now will
    only die if num_errors *and* return_type == 'num_errors'.
